Fix msparp_classic on mobile again

--- a/charat2/static/css/themes/msparp_basic.css
+++ b/charat2/static/css/themes/msparp_basic.css
@@ -411,6 +411,8 @@ p:hover > .timestamp { display: block; float: right; color: #666; }
 	#topbar h1 {background: transparent !important}
 	#topbar h1 span:before {display:none}
 	#topbar h1, #topbar .topic {color:#f4f4f4 !important}
+	body #topbar, body.disable_left_bar.chatting > #chat_wrapper #chat_content #topbar, .chatting > #chat_wrapper #chat_content #topbar { top: 4px; left:34px; right: 61px;}
+	#send_form, #info_panel, #edit_info_panel { bottom: 0px;}
 	
 	.sidebar.mobile_override .close:first-of-type {display:block !important;margin-top:5px;float:right;margin-right:20px;z-index:999}
 
